--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "gulp-cache": "^0.4.6",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.0.3",
-    "gulp-jshint": "^2.0.4",
+    "gulp-jshint": "2.x",
     "gulp-less": "^3.3.0",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^3.0.0",
     "gulp-remember": "^0.3.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.1.0",
     "jshint": "^2.9.4"
   }
